# fwupd

./: Makefile.am  configure.ac  meson.build  meson_options.txt
contrib/: fwupd.spec.in
contrib/ci/: README.md  debian_s390x.sh
contrib/debian/lintian/: fwupd  fwupd-tests
data/: Makefile.am  fwupd.service.in
data/builder/: Makefile.am
data/pki/: GPG-KEY-Linux-Foundation-Firmware  GPG-KEY-Linux-Foundation-Metadata  Makefile.am
data/remotes.d/: Makefile.am
docs/: Makefile.am
docs/libfwupd/: libfwupd-docs.xml  libfwupd.types
libfwupd/: Makefile.am  fwupd-enums.c  fwupd-enums.h
plugins/: Makefile.am  meson.build
plugins/altos/: Makefile.am  meson.build
plugins/amt/: Makefile.am  meson.build
plugins/colorhug/: Makefile.am  fu-plugin-colorhug.c  meson.build
plugins/csr/: meson.build
plugins/dell/: Makefile.am  meson.build
plugins/dfu/: Makefile.am  dfu-chunked.c  dfu-device.c  dfu-firmware.c  dfu-firmware.h  dfu-format-srec.c  dfu-format-wac.c  dfu-format-wac.h  fu-plugin-dfu.c  meson.build
plugins/ebitdo/: Makefile.am  fu-ebitdo-device.c  fu-plugin-ebitdo.c  meson.build
plugins/flashrom/: flashrom.quirk  fu-plugin-flashrom.c
plugins/nitrokey/: meson.build
plugins/qmi/: fu-plugin-qmi.c  fu-qmi-device.c  fu-qmi-device.h  meson.build  qmi-gobi3000.quirk
plugins/raspberrypi/: Makefile.am  meson.build
plugins/redfish/: meson.build
plugins/steelseries/: Makefile.am  meson.build
plugins/synapticsmst/: Makefile.am  meson.build
plugins/test/: Makefile.am  meson.build
plugins/thunderbolt/: Makefile.am  meson.build
plugins/thunderbolt-power/: Makefile.am  meson.build
plugins/udev/: Makefile.am  meson.build
plugins/uefi/: Makefile.am  meson.build
plugins/unifying/: Makefile.am  meson.build
plugins/upower/: Makefile.am  meson.build
plugins/usb/: Makefile.am
plugins/wacomhid/: fu-plugin-wacomhid.c  fu-wac-common.c  fu-wac-common.h  fu-wac-device.c  fu-wac-device.h  fu-wac-module-bluetooth.c  fu-wac-module-bluetooth.h  fu-wac-module-touch.c  fu-wac-module-touch.h  fu-wac-module.c  fu-wac-module.h  fu-wac-tool.c  meson.build  wac-intuos.quirk
policy/: Makefile.am
src/: Makefile.am  fu-device-list.c  fu-device-list.h  fu-engine.c  fu-hwids.c  fu-hwids.h  fu-plugin.c  fu-plugin.h  fu-quirks.h  fu-self-test.c  meson.build
